[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sim"
path = "src/bin/sim.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
nix = { version = "0.29.0", features = ["env", "process", "user"] }
protobuf = "3.5.0"
rand = "0.8.5"
socket2 = { version = "0.5.7", features = ["all"]}

[build-dependencies]
protobuf-codegen = "3.5.0"
