[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sim"
path = "src/bin/sim.rs"

[[bin]]
name = "telegram-sim"
path = "src/bin/telegram.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
libc = "0.2.155"
log = "0.4.22"
nix = { version = "0.29.0", features = ["env", "process", "user", "hostname", "socket"] }
protobuf = "3.5.0"
rand = "0.8.5"
socket2 = { version = "0.5.7", features = ["all"]}
stderrlog = "0.6.0"
teloxide = "0.17.0"
tokio = { version = "1.47.1", features = ["macros"] }
tokio-seqpacket = "0.8.0"

[build-dependencies]
protobuf-codegen = "3.5.0"
cc = "1.1.8"
